-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1, 5.5.0
-
None
-
a700ff9674f1e3ca86f279d3041c8e81433be7ca
When running "make qmltypes" in qtmultimedia/src/imports/multimedia qmlplugindump crashes.
command line:
~/dev/qt/qt54/qtbase/bin/qmlplugindump -nonrelocatable QtMultimedia 5.4 > ~/dev/qt/qt54/qtmultimedia/src/imports/multimedia/plugins.qmltypes
stack trace:
Thread 1 (Thread 0x7f1ffe0cd7c0 (LWP 14970)):
#0 0x00007f1ffcb4cf6d in objectClassName (m=0x0) at kernel/qmetaobject.cpp:301
No locals.
#1 0x00007f1ffcb4cfa4 in QMetaObject::className (this=0x0) at kernel/qmetaobject.cpp:311
No locals.
#2 0x0000000000405e42 in collectReachableMetaObjects (engine=0x7fffa0085ff0, noncreatables=..., singletons=..., skip=...) at main.cpp:212
ty = 0x7f1ff003eb80
_container_ = {c = {<QListSpecialMethods<QQmlType*>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x145a580}, d = 0x145a580}}, i = {i = 0x145a6b8}, e = {i = 0x145aac0}, control = 1}
metas = {q_hash = {{d = 0x145a140, e = 0x145a140}}}
extensions = {{d = 0x7f1ffcc1e0e0 <QHashData::shared_null>, e = 0x7f1ffcc1e0e0 <QHashData::shared_null>}}
#3 0x000000000040874c in main (argc=4, argv=0x7fffa0086208) at main.cpp:923
importCode = {static MaxSize = 1073741800, d = 0x1424c80}
qtObjectType = 0x7f1ff0011980
candidates = {q_hash = {{d = 0x145a140, e = 0x145a140}}}
pluginImportUri = {static null = {<No data fields>}, d = 0x1385e50}
action = Uri
defaultReachable = {q_hash = {{d = 0x1419750, e = 0x1419750}}}
defaultReachableNames = {q_hash = {{d = 0x7f1ffcc1e0e0 <QHashData::shared_null>, e = 0x7f1ffcc1e0e0 <QHashData::shared_null>}}}
bytes = {static MaxSize = 1073741800, d = 0x133cb40}
timer = {<QObject> = {_vptr.QObject = 0x7f1ffcc1e2d0 <QListData::shared_null>, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7f1ffcce21c0 <qt_meta_stringdata_QObject>, data = 0x7f1ffcce22e0 <qt_meta_data_QObject>, static_metacall = 0x7f1ffcb84508 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x1385d60}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x7f1ffcd2f7e0 <qt_meta_stringdata_Qt>, data = 0x7f1ffcd39c20 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {superdata = 0x7f1ffce31ac0 <QObject::staticMetaObject>, stringdata = 0x7f1ffcd49080 <qt_meta_stringdata_QTimer>, data = 0x7f1ffcd49220 <qt_meta_data_QTimer>, static_metacall = 0x7f1ffcc10940 <QTimer::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, id = 20471136, inter = 0, del = 1, single = 1, nulltimer = 1, type = 3}
relocatable = false
sigAction = {__sigaction_handler = {sa_handler = 0x406d9b <sigSegvHandler(int)>, sa_sigaction = 0x406d9b <sigSegvHandler(int)>}, sa_mask = {__val = {0 <repeats 16 times>}}, sa_flags = 0, sa_restorer = 0x2}
engine = {<QJSEngine> = {<QObject> = {_vptr.QObject = 0x7f1ffd460e10 <vtable for QQmlEngine+16>, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7f1ffcce21c0 <qt_meta_stringdata_QObject>, data = 0x7f1ffcce22e0 <qt_meta_data_QObject>, static_metacall = 0x7f1ffcb84508 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x1386030}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x7f1ffcd2f7e0 <qt_meta_stringdata_Qt>, data = 0x7f1ffcd39c20 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {superdata = 0x7f1ffce31ac0 <QObject::staticMetaObject>, stringdata = 0x7f1ffd281800 <qt_meta_stringdata_QJSEngine>, data = 0x7f1ffd281840 <qt_meta_data_QJSEngine>, static_metacall = 0x7f1ffcfeb390 <QJSEngine::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d = 0x13868e0}, static staticMetaObject = {d = {superdata = 0x7f1ffd459ca0 <QJSEngine::staticMetaObject>, stringdata = 0x7f1ffd334e40 <qt_meta_stringdata_QQmlEngine>, data = 0x7f1ffd334f20 <qt_meta_data_QQmlEngine>, static_metacall = 0x7f1ffd263f90 <QQmlEngine::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}}
appName = {static null = {<No data fields>}, d = 0x1385ff0}
pluginImportVersion = {static null = {<No data fields>}, d = 0x1384730}
singletonMetas = {q_hash = {{d = 0x145af10, e = 0x145af10}}}
metas = {q_hash = {{d = 0x7f1ffcc1e0e0 <QHashData::shared_null>, e = 0x7f1ffcc1e0e0 <QHashData::shared_null>}}}
qml = {m_indentDepth = -52225264, m_pendingLines = {<QListSpecialMethods<QByteArray>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x1424d10}, d = 0x1424d10}}, m_pendingLineLength = -1610063664, m_maybeOneline = 255, m_stream = {d = 0x7f1ffe0a4557 <_dl_fixup+247>}}
requireWindowManager = false
app = {<QCoreApplication> = {<QObject> = {_vptr.QObject = 0x7f1ffdb241f0 <vtable for QGuiApplication+16>, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7f1ffcce21c0 <qt_meta_stringdata_QObject>, data = 0x7f1ffcce22e0 <qt_meta_data_QObject>, static_metacall = 0x7f1ffcb84508 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x133c990}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x7f1ffcd2f7e0 <qt_meta_stringdata_Qt>, data = 0x7f1ffcd39c20 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {superdata = 0x7f1ffce31ac0 <QObject::staticMetaObject>, stringdata = 0x7f1ffcd46a00 <qt_meta_stringdata_QCoreApplication>, data = 0x7f1ffcd46c20 <qt_meta_data_QCoreApplication>, static_metacall = 0x7f1ffcc10024 <QCoreApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, static self = 0x7fffa0085ef0}, static staticMetaObject = {d = {superdata = 0x7f1ffce352c0 <QCoreApplication::staticMetaObject>, stringdata = 0x7f1ffd995140 <qt_meta_stringdata_QGuiApplication>, data = 0x7f1ffd995620 <qt_meta_data_QGuiApplication>, static_metacall = 0x7f1ffd5795a4 <QGuiApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}}
args = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x1385d30}, d = 0x1385d30}}, <No data fields>}
uncreatableMetas = {q_hash = {{d = 0x1421e00, e = 0x1421e00}}}
defaultTypes = {<QListSpecialMethods<QQmlType*>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x1459960}, d = 0x1459960}}
nameToMeta = {d = 0x1459300}
dumper = {qml = 0x1456740, relocatableModuleUri = {static null = {<No data fields>}, d = 0x100000830}}
warning: can't find linker symbol for virtual table for `QTimer' value
The crash happens when the QML singleton type "QtMultimedia" is processed as its QMetaObject is 0x0.
- is required for
-
QTBUG-44300 Update plugins.qmltypes for QtMultimedia
-
- Closed
-